--- a/odoo-bringout-oca-payroll-payroll_account/payroll_account/i18n/bs.po
+++ b/odoo-bringout-oca-payroll-payroll_account/payroll_account/i18n/bs.po
@@ -47,7 +47,7 @@ msgstr "Osnova"
 #. module: payroll_account
 #: model:ir.model.fields,field_description:payroll_account.field_hr_payslip_line__company_id
 msgid "Company"
-msgstr "Kompanija"
+msgstr "Preduzeće"
 
 # taken from hr.po
 #. module: payroll_account
